--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gatsby-starter-default",
   "description": "Gatsby default starter",
+  "homepage": "https://RayOlivier.github.io",
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
